--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,11 +3,11 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/32445/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Thu, 01 Jan 1970 00:00:00 UTC"
+update_date: "Tue, 04 Feb 2025 09:29:30 UTC"
 stages:
   - id: 2281
     step: 35304
-    is_completed: false
+    is_completed: true
   - id: 2282
     step: 35305
     is_completed: false
