--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,14 +3,14 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/32445/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Wed, 05 Feb 2025 13:04:52 UTC"
+update_date: "Thu, 06 Feb 2025 09:40:50 UTC"
 stages:
   - id: 2281
     step: 35304
     is_completed: true
   - id: 2282
     step: 35305
-    is_completed: false
+    is_completed: true
   - id: 2283
     step: 35306
     is_completed: false
@@ -65,10 +65,10 @@ topics:
       theory_id: 3503
     - title: One-line condition with ternary operator
       theory_id: 3506
-    - title: While and do-while loops
-      theory_id: 3498
     - title: For loop
       theory_id: 3505
+    - title: While and do-while loops
+      theory_id: 3498
     - title: Break and continue. Branching
       theory_id: 3507
     - title: Declaring methods
@@ -89,6 +89,10 @@ topics:
       theory_id: 1933
     - title: Formatted output
       theory_id: 7046
+    - title: Debugging techniques
+      theory_id: 13775
+    - title: Debugging simple constructs
+      theory_id: 16479
   1:
     - title: "Write, compile, and run"
       theory_id: 3739
@@ -137,8 +141,6 @@ topics:
       theory_id: 5504
     - title: Introduction to logging
       theory_id: 5538
-    - title: Debugging techniques
-      theory_id: 13775
   3:
     - title: Constants. Final variables
       theory_id: 7427
