--- a/Battleship with Java/Add shooting functionality/task-info.yaml
+++ b/Battleship with Java/Add shooting functionality/task-info.yaml
@@ -6,6 +6,18 @@ files:
   - name: test/Tests.java
     visible: false
     learner_created: false
+  - name: src/battleship/WrongLengthException.java
+    visible: true
+    learner_created: true
+  - name: src/battleship/AdjacentLocationException.java
+    visible: true
+    learner_created: true
+  - name: src/battleship/WrongLocationException.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/35306#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Fri, 07 Feb 2025 10:17:39 UTC"
 record: -1
