--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/32445/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Thu, 06 Feb 2025 09:40:50 UTC"
+update_date: "Fri, 07 Feb 2025 09:58:29 UTC"
 stages:
   - id: 2281
     step: 35304
@@ -13,7 +13,7 @@ stages:
     is_completed: true
   - id: 2283
     step: 35306
-    is_completed: false
+    is_completed: true
   - id: 2284
     step: 35307
     is_completed: false
@@ -25,6 +25,10 @@ stages:
     is_completed: false
 topics:
   0:
+    - title: "Write, compile, and run"
+      theory_id: 3739
+    - title: IDE
+      theory_id: 10996
     - title: Introduction to Java
       theory_id: 38627
     - title: "Basic literals: numbers, strings and characters"
@@ -75,49 +79,50 @@ topics:
       theory_id: 10982
     - title: Method "main"
       theory_id: 3489
-    - title: Primitive and reference types
-      theory_id: 5035
-    - title: Array
-      theory_id: 3511
-    - title: Iterating over arrays
-      theory_id: 3602
-    - title: Characters
-      theory_id: 3514
-    - title: String
-      theory_id: 3523
-    - title: Multidimensional array
-      theory_id: 1933
-    - title: Formatted output
-      theory_id: 7046
-    - title: Debugging techniques
-      theory_id: 13775
-    - title: Debugging simple constructs
-      theory_id: 16479
-  1:
-    - title: "Write, compile, and run"
-      theory_id: 3739
     - title: "Multiple conditions: switch"
       theory_id: 3504
     - title: Functional decomposition
       theory_id: 10570
     - title: Overloading
       theory_id: 3525
+    - title: Primitive and reference types
+      theory_id: 5035
+    - title: Array
+      theory_id: 3511
     - title: Arrays as parameters
       theory_id: 3594
+    - title: Iterating over arrays
+      theory_id: 3602
+    - title: Characters
+      theory_id: 3514
+    - title: String
+      theory_id: 3523
     - title: Errors in programs
       theory_id: 3536
     - title: First glance at exceptions
       theory_id: 3497
-    - title: NullPointerException
-      theory_id: 1945
     - title: What is object-oriented programming
       theory_id: 3614
     - title: Hierarchy of exceptions
       theory_id: 3570
-    - title: Exception handling
-      theory_id: 3552
-    - title: Array exceptions
-      theory_id: 1940
+    - title: What are bugs
+      theory_id: 5504
+    - title: Multidimensional array
+      theory_id: 1933
+    - title: Formatted output
+      theory_id: 7046
+    - title: Introduction to logging
+      theory_id: 5538
+    - title: Debugging techniques
+      theory_id: 13775
+    - title: Debugging overview
+      theory_id: 14368
+    - title: IntelliJ IDEA
+      theory_id: 37202
+    - title: Run and debug with IntelliJ IDEA
+      theory_id: 37206
+    - title: Debugging simple constructs
+      theory_id: 16479
     - title: Defining classes
       theory_id: 3618
     - title: Grouping classes with packages
@@ -136,6 +141,13 @@ topics:
       theory_id: 3538
     - title: Keyword "super"
       theory_id: 3588
+  1:
+    - title: NullPointerException
+      theory_id: 1945
+    - title: Exception handling
+      theory_id: 3552
+    - title: Array exceptions
+      theory_id: 1940
   2:
     - title: What are bugs
       theory_id: 5504
