--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/32445/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Mon, 10 Feb 2025 09:13:10 UTC"
+update_date: "Tue, 11 Feb 2025 10:55:35 UTC"
 stages:
   - id: 2281
     step: 35304
@@ -22,7 +22,7 @@ stages:
     is_completed: true
   - id: 2286
     step: 35309
-    is_completed: false
+    is_completed: true
 topics:
   0:
     - title: "Write, compile, and run"
@@ -153,6 +153,8 @@ topics:
       theory_id: 5504
     - title: Introduction to logging
       theory_id: 5538
+    - title: Debugging techniques
+      theory_id: 13775
   3:
     - title: Constants. Final variables
       theory_id: 7427
